--- a/public/about/index.html
+++ b/public/about/index.html
@@ -72,7 +72,7 @@
             </li>
         
             <li class="" role="menuitem">
-              <a href="/tags/golang/">Go</a>
+              <a href="misc/zieffler-cv-2018-01-01.pdf">CV</a>
             </li>
         
             <li class="" role="menuitem">
