--- a/public/about/index.html
+++ b/public/about/index.html
@@ -72,7 +72,7 @@
             </li>
         
             <li class="" role="menuitem">
-              <a href="misc/zieffler-cv-2018-01-01.pdf">CV</a>
+              <a href="https://github.com/zief0002/website/raw/master/misc/zieffler-cv-2018-01-01.pdf">CV</a>
             </li>
         
             <li class="" role="menuitem">
