--- a/public/about/index.html
+++ b/public/about/index.html
@@ -68,7 +68,7 @@
             </li>
         
             <li class="" role="menuitem">
-              <a href="/contact/">Contact Information</a>
+              <a href="/colophon/">Colophon</a>
             </li>
         
             <li class="nav-current" role="menuitem">
