--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -52,7 +52,7 @@ office: 178 EdSciB" />
     <link rel="stylesheet" type="text/css" href="/built/screen.css" /> 
     <link rel="stylesheet" type="text/css" href="/css/casper-two.css" /> 
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css" />
-    
+     <link rel="stylesheet" href="/css/zieffler.css" /> 
 
      
 
