--- a/public/about/index.html
+++ b/public/about/index.html
@@ -43,7 +43,7 @@
     <link rel="stylesheet" type="text/css" href="/built/screen.css" /> 
     <link rel="stylesheet" type="text/css" href="/css/casper-two.css" /> 
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css" />
-    
+     <link rel="stylesheet" href="/css/zieffler.css" /> 
 
      
 
