--- a/public/colophon/index.html
+++ b/public/colophon/index.html
@@ -46,7 +46,7 @@ images:  books on typography, a Flickr photo by no_typographic_man. License: CC 
     <link rel="stylesheet" type="text/css" href="/built/screen.css" /> 
     <link rel="stylesheet" type="text/css" href="/css/casper-two.css" /> 
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css" />
-    
+     <link rel="stylesheet" href="/css/zieffler.css" /> 
 
      
 
