--- a/public/404.html
+++ b/public/404.html
@@ -260,7 +260,7 @@
   </ul>
   
   <ul>
-    <li><a href="/publication/clothing-search/">Mobile visual clothing search</a></li>
+    <li><a href="/publication/clothing-search/">My article</a></li>
   </ul>
   
   
