--- a/public/publication/index.html
+++ b/public/publication/index.html
@@ -345,7 +345,7 @@
   <span itemprop="author">
     GA Cushen, MS Nixon</span>
   (2013).
-  <a href="/publication/clothing-search/" itemprop="name">Mobile visual clothing search</a>.
+  <a href="/publication/clothing-search/" itemprop="name">My article</a>.
   In <em>ICMEW</em>.
   
   <p>
