--- a/public/publication_types/1/index.html
+++ b/public/publication_types/1/index.html
@@ -247,7 +247,7 @@
   
   
   <div>
-    <h2><a href="/publication/clothing-search/">Mobile visual clothing search</a></h2>
+    <h2><a href="/publication/clothing-search/">My article</a></h2>
     <div class="article-style">
       
     </div>
