--- a/public/publication/clothing-search/index.html
+++ b/public/publication/clothing-search/index.html
@@ -75,7 +75,7 @@
   
   <meta property="og:site_name" content="Andrew Zieffler">
   <meta property="og:url" content="/publication/clothing-search/">
-  <meta property="og:title" content="Mobile visual clothing search | Andrew Zieffler">
+  <meta property="og:title" content="My article | Andrew Zieffler">
   <meta property="og:description" content="We present a mobile visual clothing search system whereby a smart phone user can either choose a social networking photo or take a new photo of a person wearing clothing of interest and search for similar clothing in a retail database. From the query image, the person is detected, clothing is segmented, and clothing features are extracted and quantized. The information is sent from the phone client to a server, where the feature vector of the query image is used to retrieve similar clothing products from online databases. The phone&#39;s GPS location is used to re-rank results by retail store location. State of the art work focuses primarily on the recognition of a diverse range of clothing offline and pays little attention to practical applications. Evaluated on a challenging dataset, the system is relatively fast and achieves promising results."><meta property="og:image" content="/img/typewriter.png">
   <meta property="og:locale" content="en-us">
   
@@ -86,7 +86,7 @@
 
   
 
-  <title>Mobile visual clothing search | Andrew Zieffler</title>
+  <title>My article | Andrew Zieffler</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
@@ -249,7 +249,7 @@
 
 
   <div class="article-container">
-    <h1 itemprop="name">Mobile visual clothing search</h1>
+    <h1 itemprop="name">My article</h1>
     <span class="pub-authors" itemprop="author">
       
       GA Cushen, MS Nixon
@@ -261,7 +261,7 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Mobile%20visual%20clothing%20search&amp;url=%2fpublication%2fclothing-search%2f"
+         href="https://twitter.com/intent/tweet?text=My%20article&amp;url=%2fpublication%2fclothing-search%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
@@ -275,21 +275,21 @@
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fpublication%2fclothing-search%2f&amp;title=Mobile%20visual%20clothing%20search"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fpublication%2fclothing-search%2f&amp;title=My%20article"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=%2fpublication%2fclothing-search%2f&amp;title=Mobile%20visual%20clothing%20search"
+         href="http://service.weibo.com/share/share.php?url=%2fpublication%2fclothing-search%2f&amp;title=My%20article"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Mobile%20visual%20clothing%20search&amp;body=%2fpublication%2fclothing-search%2f">
+         href="mailto:?subject=My%20article&amp;body=%2fpublication%2fclothing-search%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
