--- a/public/404.html
+++ b/public/404.html
@@ -256,11 +256,15 @@
   <h2>Publications</h2>
   
   <ul>
-    <li><a href="/publication/person-re-identification/">A Person Re-Identification System For Mobile Devices</a></li>
+    <li><a href="/publication/2017-biosquare/">Development of a Biological Science Quantitative Reasoning Exam (BioSQuaRE)</a></li>
   </ul>
   
   <ul>
-    <li><a href="/publication/clothing-search/">My article</a></li>
+    <li><a href="/publication/2017-serj/">Statistics graduate teaching assistants&#39; beliefs, practices, and preparation for teaching introductory statistics</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/publication/_example/">Statistics graduate teaching assistants&#39; beliefs, practices, and preparation for teaching introductory statistics</a></li>
   </ul>
   
   
@@ -284,7 +288,15 @@
   </ul>
   
   <ul>
+    <li><a href="/project/2018-02-21-biosquare/">BioSQuaRE</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/project/catalst-project/">CATALST Project</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/project/2018-02-19-college-in-the-schools/"></a></li>
   </ul>
   
   
