--- a/public/404.html
+++ b/public/404.html
@@ -242,6 +242,14 @@
   <h2>Posts</h2>
   
   <ul>
+    <li><a href="/post/2018-02-19-college-in-the-schools/">College in the Schools</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/post/hello/">Hello</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/post/getting-started/">Academic: the website designer for Hugo</a></li>
   </ul>
   
@@ -257,6 +265,10 @@
   
   <ul>
     <li><a href="/publication/2017-biosquare/">Development of a Biological Science Quantitative Reasoning Exam (BioSQuaRE)</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/publication/2017-serj/">Statistics graduate teaching assistants&#39; beliefs, practices, and preparation for teaching introductory statistics</a></li>
   </ul>
   
   <ul>
@@ -289,10 +301,6 @@
   
   <ul>
     <li><a href="/project/catalst-project/">CATALST Project</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/project/2018-02-19-college-in-the-schools/"></a></li>
   </ul>
   
   
