--- a/public/publication_types/2/index.html
+++ b/public/publication_types/2/index.html
@@ -254,6 +254,13 @@
   </div>
   
   <div>
+    <h2><a href="/publication/2017-serj/">Statistics graduate teaching assistants&#39; beliefs, practices, and preparation for teaching introductory statistics</a></h2>
+    <div class="article-style">
+      
+    </div>
+  </div>
+  
+  <div>
     <h2><a href="/publication/_example/">Statistics graduate teaching assistants&#39; beliefs, practices, and preparation for teaching introductory statistics</a></h2>
     <div class="article-style">
       
