--- a/public/404.html
+++ b/public/404.html
@@ -246,15 +246,7 @@
   </ul>
   
   <ul>
-    <li><a href="/post/hello/">Hello</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/post/getting-started/">Academic: the website designer for Hugo</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/post/2015-07-23-r-rmarkdown/">Hello R Markdown</a></li>
+    <li><a href="/post/epsy-3264-basic-and-applied-statistics/">EPsy 3264: Basic and Applied Statistics</a></li>
   </ul>
   
   
@@ -269,10 +261,6 @@
   
   <ul>
     <li><a href="/publication/2017-serj/">Statistics graduate teaching assistants&#39; beliefs, practices, and preparation for teaching introductory statistics</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/_example/">Statistics graduate teaching assistants&#39; beliefs, practices, and preparation for teaching introductory statistics</a></li>
   </ul>
   
   
