--- a/public/publication/2017-serj/index.html
+++ b/public/publication/2017-serj/index.html
@@ -243,7 +243,7 @@
   
 <div class="article-header">
   <img src="/img/typewriter.png" class="article-banner" itemprop="image">
-  <span class="article-header-caption">Image Credit: Typewriter, a Flickr photo by Mateusz Łapsa-Malawski</span>
+  <span class="article-header-caption">Image Credit: A flickr photo by Mateusz Łapsa-Malawski</span>
 </div>
 
 
