--- a/public/404.html
+++ b/public/404.html
@@ -256,11 +256,23 @@
   <h2>Publications</h2>
   
   <ul>
-    <li><a href="/publication/2017-biosquare/">Development of a Biological Science Quantitative Reasoning Exam (BioSQuaRE)</a></li>
+    <li><a href="/publication/2015-tas/">Teardowns, Historical Renovation, and Paint-and-Patch: Curricular Changes and Faculty Development. Invited comment on G. Cobb, &#39;Mere Renovation is too Little too Late: We need to Rethink our Undergraduate Curriculum from the Ground Up&#39;</a></li>
   </ul>
   
   <ul>
-    <li><a href="/publication/2017-serj/">Statistics graduate teaching assistants&#39; beliefs, practices, and preparation for teaching introductory statistics</a></li>
+    <li><a href="/publication/2015-serj/">Assessing Learning Outcomes: An Analysis of the GOALS-2 Instrument</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/publication/2015-biosquare/">Understanding the Quantitative and Computational Skills of Incoming Biology Students</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/publication/2015-chance/">A Catalyst for Change in the High School Math Curriculum</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/publication/2014-esm/">Developing Students&#39; Reasoning about Samples and Sampling Variability as a Path to Expert Statistical Thinking</a></li>
   </ul>
   
   
