--- a/public/publication/2017-biosquare/index.html
+++ b/public/publication/2017-biosquare/index.html
@@ -252,7 +252,7 @@
     <h1 itemprop="name">Development of a Biological Science Quantitative Reasoning Exam (BioSQuaRE)</h1>
     <span class="pub-authors" itemprop="author">
       
-      Stanhope, E., Ziegler, L., Haque, T., Le, L., Vinces, M., Davis, G. K., Zieffler, A., Brodfuehrer, P., Preest, M., Belisky, J., Umbanhowar, Jr., C., Overvoorde, P. J.
+      Stanhope, E., Ziegler, L., Haque, T., Le, L., Vinces, M., Davis, G. K., Zieffler, A., Brodfuehrer, P., Preest, M., Belitsky, J., Umbanhowar, Jr., C., Overvoorde, P. J.
       
     </span>
     <span class="pull-right">
