--- a/public/publication_types/0/index.html
+++ b/public/publication_types/0/index.html
@@ -18,7 +18,7 @@
   <meta name="description" content="Senior Lecturer of Quantitative Methods in Education">
 
   
-  <link rel="alternate" hreflang="en-us" href="/publication_types/">
+  <link rel="alternate" hreflang="en-us" href="/publication_types/0/">
 
   
 
@@ -67,13 +67,13 @@
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="/publication_types/">
+  <link rel="canonical" href="/publication_types/0/">
 
   <meta property="twitter:card" content="summary_large_image">
   
   <meta property="og:site_name" content="Andrew Zieffler">
-  <meta property="og:url" content="/publication_types/">
-  <meta property="og:title" content="Publication_types | Andrew Zieffler">
+  <meta property="og:url" content="/publication_types/0/">
+  <meta property="og:title" content="0 | Andrew Zieffler">
   <meta property="og:description" content="Senior Lecturer of Quantitative Methods in Education">
   <meta property="og:locale" content="en-us">
   
@@ -82,7 +82,7 @@
 
   
 
-  <title>Publication_types | Andrew Zieffler</title>
+  <title>0 | Andrew Zieffler</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
@@ -240,21 +240,14 @@
 
 <div class="universal-wrapper">
 
-  <h1>Publication_types</h1>
+  <h1>0</h1>
 
   
 
   
   
   <div>
-    <h2><a href="/publication_types/0/">0</a></h2>
-    <div class="article-style">
-      
-    </div>
-  </div>
-  
-  <div>
-    <h2><a href="/publication_types/2/">2</a></h2>
+    <h2><a href="/publication/2015-biosquare/">Understanding the Quantitative and Computational Skills of Incoming Biology Students</a></h2>
     <div class="article-style">
       
     </div>
