changed back to default

--- a/public/project/aims-project/index.html
+++ b/public/project/aims-project/index.html
@@ -33,7 +33,7 @@ The AIMS materials are available on Github at https://github.com/zief0002/aims
 
   
   
-  <meta name="theme-color" content="rgb(255, 45, 33)">
+  <meta name="theme-color" content="#0095eb">
   
   
   
