--- a/public/project/catalst-project/index.html
+++ b/public/project/catalst-project/index.html
@@ -31,7 +31,7 @@ The data sets and PDF version of the lab manual are available at the book&rsquo;
 
   
   
-  <meta name="theme-color" content="rgb(255, 45, 33)">
+  <meta name="theme-color" content="#0095eb">
   
   
   
