--- a/public/project/2018-02-21-biosquare/index.html
+++ b/public/project/2018-02-21-biosquare/index.html
@@ -31,7 +31,7 @@ Background In 2012, several PIs who had received grants from HHMI to implement i
 
   
   
-  <meta name="theme-color" content="rgb(255, 45, 33)">
+  <meta name="theme-color" content="#0095eb">
   
   
   
