--- a/public/404.html
+++ b/public/404.html
@@ -242,6 +242,10 @@
   <h2>Posts</h2>
   
   <ul>
+    <li><a href="/post/2018-03-03-boys-hockey/">Minnesota State High School Boys Hockey Predictions</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/post/2018-02-19-college-in-the-schools/">College in the Schools</a></li>
   </ul>
   
