--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,7 @@
 
   <title>Andrew Zieffler</title>
 
+
 </head>
 <body id="top" data-spy="scroll" data-target="#navbar-main" data-offset="71" >
 
@@ -1274,7 +1275,7 @@ Since CIS is a concurrent enrollment program, students are enrolled simultaneous
   <div class="container">
     <p class="powered-by">
 
-      &copy; 2018 &middot; 
+      This work is licensed under a Creative Commons Attribution-ShareAlike 4.0 International License. &middot; 
 
       Powered by the
       <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">Academic theme</a> for
