--- a/public/publication/2017-biosquare/index.html
+++ b/public/publication/2017-biosquare/index.html
@@ -88,6 +88,7 @@
 
   <title>Development of a Biological Science Quantitative Reasoning Exam (BioSQuaRE) | Andrew Zieffler</title>
 
+
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
 
@@ -431,7 +432,7 @@
   <div class="container">
     <p class="powered-by">
 
-      &copy; 2018 &middot; 
+      This work is licensed under a Creative Commons Attribution-ShareAlike 4.0 International License. &middot; 
 
       Powered by the
       <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">Academic theme</a> for
