--- a/public/publication_types/2/index.html
+++ b/public/publication_types/2/index.html
@@ -84,6 +84,7 @@
 
   <title>2 | Andrew Zieffler</title>
 
+
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
 
@@ -316,7 +317,7 @@
   <div class="container">
     <p class="powered-by">
 
-      &copy; 2018 &middot; 
+      This work is licensed under a Creative Commons Attribution-ShareAlike 4.0 International License. &middot; 
 
       Powered by the
       <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">Academic theme</a> for
