--- a/public/project/aims-project/index.html
+++ b/public/project/aims-project/index.html
@@ -96,6 +96,7 @@ The AIMS materials are available on Github at https://github.com/zief0002/aims
 
   <title>AIMS Project | Andrew Zieffler</title>
 
+
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
 
@@ -446,7 +447,7 @@ The AIMS materials are available on Github at https://github.com/zief0002/aims
   <div class="container">
     <p class="powered-by">
 
-      &copy; 2018 &middot; 
+      This work is licensed under a Creative Commons Attribution-ShareAlike 4.0 International License. &middot; 
 
       Powered by the
       <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">Academic theme</a> for
