--- a/public/project/catalst-project/index.html
+++ b/public/project/catalst-project/index.html
@@ -92,6 +92,7 @@ The data sets and PDF version of the lab manual are available at the book&rsquo;
 
   <title>CATALST Project | Andrew Zieffler</title>
 
+
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
 
@@ -376,7 +377,7 @@ The data sets and PDF version of the lab manual are available at the book&rsquo;
   <div class="container">
     <p class="powered-by">
 
-      &copy; 2018 &middot; 
+      This work is licensed under a Creative Commons Attribution-ShareAlike 4.0 International License. &middot; 
 
       Powered by the
       <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">Academic theme</a> for
