--- a/public/publication/2015-tas/index.html
+++ b/public/publication/2015-tas/index.html
@@ -88,6 +88,7 @@
 
   <title>Teardowns, Historical Renovation, and Paint-and-Patch: Curricular Changes and Faculty Development. Invited comment on G. Cobb, &#39;Mere Renovation is too Little too Late: We need to Rethink our Undergraduate Curriculum from the Ground Up&#39; | Andrew Zieffler</title>
 
+
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
 
@@ -427,7 +428,7 @@
   <div class="container">
     <p class="powered-by">
 
-      &copy; 2018 &middot; 
+      This work is licensed under a Creative Commons Attribution-ShareAlike 4.0 International License. &middot; 
 
       Powered by the
       <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">Academic theme</a> for
