Added e-ATLAS project

--- a/public/404.html
+++ b/public/404.html
@@ -316,6 +316,10 @@
   <h2>Projects</h2>
   
   <ul>
+    <li><a href="/project/eatlas-project/">e-ATLAS Project</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/project/aims-project/">AIMS Project</a></li>
   </ul>
   
