--- a/public/index.html
+++ b/public/index.html
@@ -1079,7 +1079,7 @@ Since CIS is a concurrent enrollment program, students are enrolled simultaneous
           <div class="card-text">
             <h4><a href="/project/eatlas-project/" >e-ATLAS Project</a></h4>
             <div class="card-desription">
-              <p><em>Evaluation and Assessment of Teaching and Learning About Statistics (e-ATLAS)</em> was an NSF-funded project (DUE-1044812 &amp; 1043141) that developed high-quality instruments to help evaluate the effectiveness of past and on-going efforts to reform the teaching and learning of introductory statistics at the tertiary level.</p>
+              <p><em>Evaluation and Assessment of Teaching and Learning About Statistics</em> (e-ATLAS) was an NSF-funded project from 2011&ndash;2013 that developed high-quality instruments to help evaluate the effectiveness of past and on-going efforts to reform the teaching and learning of introductory statistics at the tertiary level (DUE-1044812 &amp; 1043141).</p>
             </div>
           </div>
         </div>
@@ -1099,7 +1099,7 @@ Since CIS is a concurrent enrollment program, students are enrolled simultaneous
           <div class="card-text">
             <h4><a href="/project/aims-project/" >AIMS Project</a></h4>
             <div class="card-desription">
-              <p>The NSF-funded project <em>Adapting and Implementing Innovative Material in Statistics (AIMS)</em> developed lesson plans and activities based on innovative materials that have been produced for introductory statistics courses.</p>
+              <p><em>Adapting and Implementing Innovative Material in Statistics</em> (AIMS) was an NSF-funded project from 2006&ndash;2010 that developed lesson plans and activities based on innovative materials that have been produced for introductory statistics courses (DUE-0535912).</p>
             </div>
           </div>
         </div>
@@ -1139,7 +1139,7 @@ Since CIS is a concurrent enrollment program, students are enrolled simultaneous
           <div class="card-text">
             <h4><a href="/project/catalst-project/" >CATALST Project</a></h4>
             <div class="card-desription">
-              <p><em>Change Agents for Teaching and Learning Statistics (CATALST)</em> was an NSF-funded project that developed materials for teaching a radically different introductory statistics course based on randomization and bootstrap methods to provide students a deep understanding of statistical inference.</p>
+              <p><em>Change Agents for Teaching and Learning Statistics</em> (CATALST) was an NSF-funded project from 2008&ndash;2012 that developed materials for teaching a radically different introductory statistics course based on randomization and bootstrap methods to provide students a deep understanding of statistical inference (DUE-0814433).</p>
             </div>
           </div>
         </div>
