--- a/public/project/catalst-project/index.html
+++ b/public/project/catalst-project/index.html
@@ -326,7 +326,7 @@ The data sets and PDF version of the lab manual are available at the book&rsquo;
     
 
     <div class="article-style" itemprop="articleBody">
-      <p><em>Change Agents for Teaching and Learning Statistics (CATALST)</em> was an NSF-funded project that developed materials for teaching a radically different introductory statistics course based on randomization and bootstrap methods to provide students a deep understanding of statistical inference.</p>
+      <p><em>Change Agents for Teaching and Learning Statistics</em> (CATALST) was an NSF-funded project that developed materials for teaching a radically different introductory statistics course based on randomization and bootstrap methods to provide students a deep understanding of statistical inference.</p>
 
 <p>The materials were turned into a free, online book, <em>Statistical Thinking: A Simulation Approach to Modeling Uncertainty</em>, available at: <a href="http://zief0002.github.io/statistical-thinking/" target="_blank">http://zief0002.github.io/statistical-thinking/</a>.</p>
 
