--- a/public/404.html
+++ b/public/404.html
@@ -280,23 +280,23 @@
   <h2>Publications</h2>
   
   <ul>
-    <li><a href="/publication/2015-tas/">Teardowns, Historical Renovation, and Paint-and-Patch: Curricular Changes and Faculty Development. Invited comment on G. Cobb, &#39;Mere Renovation is too Little too Late: We need to Rethink our Undergraduate Curriculum from the Ground Up&#39;</a></li>
+    <li><a href="/publication/2013-tise/">The Course as Textbook: A Symbiotic Relationship in the Introductory Statistics Class</a></li>
   </ul>
   
   <ul>
-    <li><a href="/publication/2015-serj/">Assessing Learning Outcomes: An Analysis of the GOALS-2 Instrument</a></li>
+    <li><a href="/publication/2012-zdm/">Developing Statistical Modelers and Thinkers in an Introductory, Tertiary-Level Statistics Course</a></li>
   </ul>
   
   <ul>
-    <li><a href="/publication/2015-biosquare/">Understanding the Quantitative and Computational Skills of Incoming Biology Students</a></li>
+    <li><a href="/publication/2012-brm/">Automated Assembly of Optimally Spaced and Balanced Paired Comparisons: Controlling Order Effects</a></li>
   </ul>
   
   <ul>
-    <li><a href="/publication/2015-chance/">A Catalyst for Change in the High School Math Curriculum</a></li>
+    <li><a href="/publication/2012-jse/">The Statistics Teaching Inventory: A Survey on Statistics Teachers&#39; Classroom Practices and Beliefs</a></li>
   </ul>
   
   <ul>
-    <li><a href="/publication/2014-esm/">Developing Students&#39; Reasoning about Samples and Sampling Variability as a Path to Expert Statistical Thinking</a></li>
+    <li><a href="/publication/2011-tas/">Rethinking Assessment of Student Learning in Statistics Courses</a></li>
   </ul>
   
   
