--- a/public/publication/2015-serj/index.html
+++ b/public/publication/2015-serj/index.html
@@ -397,7 +397,7 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="/project/CATALST/">
+<a class="btn btn-primary btn-outline" href="/project/catalst-project/">
   Project
 </a>
 
