--- a/public/publication/2015-chance/index.html
+++ b/public/publication/2015-chance/index.html
@@ -393,7 +393,7 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="/project/CATALST/">
+<a class="btn btn-primary btn-outline" href="/project/catalst-project/">
   Project
 </a>
 
