Updated publications and color scheme

--- a/public/404.html
+++ b/public/404.html
@@ -25,7 +25,7 @@
 
   
   
-  <meta name="theme-color" content="#0095eb">
+  <meta name="theme-color" content="#03878a">
   
   
   
@@ -280,23 +280,23 @@
   <h2>Publications</h2>
   
   <ul>
-    <li><a href="/publication/2013-tise/">The Course as Textbook: A Symbiotic Relationship in the Introductory Statistics Class</a></li>
+    <li><a href="/publication/2009-serj/">Modeling the Growth of Students&#39; Covariational Reasoning during an Introductory Statistics Course</a></li>
   </ul>
   
   <ul>
-    <li><a href="/publication/2012-zdm/">Developing Statistical Modelers and Thinkers in an Introductory, Tertiary-Level Statistics Course</a></li>
+    <li><a href="/publication/2008-serj/">A Framework to Support Research on Informal Inferential Reasoning</a></li>
   </ul>
   
   <ul>
-    <li><a href="/publication/2012-brm/">Automated Assembly of Optimally Spaced and Balanced Paired Comparisons: Controlling Order Effects</a></li>
+    <li><a href="/publication/2008-ts/">Implementing New Reform Guidelines in Teaching Introductory College Statistics Courses</a></li>
   </ul>
   
   <ul>
-    <li><a href="/publication/2012-jse/">The Statistics Teaching Inventory: A Survey on Statistics Teachers&#39; Classroom Practices and Beliefs</a></li>
+    <li><a href="/publication/2008-jse/">What does Research Suggest about the Teaching and Learning of Introductory Statistics at the College Level? A Review of the Literature</a></li>
   </ul>
   
   <ul>
-    <li><a href="/publication/2011-tas/">Rethinking Assessment of Student Learning in Statistics Courses</a></li>
+    <li><a href="/publication/2006-nctm/">Research in the Statistics Classroom: Learning from Teaching Experiments</a></li>
   </ul>
   
   
