--- a/public/project/eatlas-project/index.html
+++ b/public/project/eatlas-project/index.html
@@ -30,7 +30,7 @@ The two main instruments developed as part of this project were the Statistics T
 
   
   
-  <meta name="theme-color" content="#0095eb">
+  <meta name="theme-color" content="#03878a">
   
   
   
