--- a/public/index.html
+++ b/public/index.html
@@ -639,10 +639,6 @@ url('/img/typewriter.png');
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://amstat.tandfonline.com/doi/abs/10.1080/09332480.2015.1099365" target="_blank" rel="noopener">
-  Source Document
-</a>
-
 
 </p>
 </div>
@@ -827,10 +823,6 @@ url('/img/typewriter.png');
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://link.springer.com/article/10.1007/s11858-012-0447-5" target="_blank" rel="noopener">
-  Source Document
-</a>
-
 
 </p>
 </div>
@@ -866,10 +858,6 @@ url('/img/typewriter.png');
 
 
 
-
-<a class="btn btn-primary btn-outline btn-xs" href="https://link.springer.com/article/10.3758%2Fs13428-011-0170-0" target="_blank" rel="noopener">
-  Source Document
-</a>
 
 
 </p>
@@ -942,10 +930,6 @@ url('/img/typewriter.png');
 
 
 
-
-<a class="btn btn-primary btn-outline btn-xs" href="https://amstat.tandfonline.com/doi/abs/10.1198/tast.2011.08241" target="_blank" rel="noopener">
-  Source Document
-</a>
 
 
 </p>
@@ -1127,10 +1111,6 @@ url('/img/typewriter.png');
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="http://onlinelibrary.wiley.com/doi/10.1111/j.1467-9639.2008.00331.x/abstract" target="_blank" rel="noopener">
-  Source Document
-</a>
-
 
 </p>
 </div>
@@ -1180,7 +1160,7 @@ url('/img/typewriter.png');
     Ben-Zvi, D., Garfield, J., Zieffler, A.</span>
   (2006).
   <a href="/publication/2006-nctm/" itemprop="name">Research in the Statistics Classroom: Learning from Teaching Experiments</a>.
-  In In G. Burrill and P. C. Elliott (Eds.), <em>Thinking and Reasoning with Data and Chance: 68th NCTM Yearbook</em> (pp. 467&ndash;482). Reston, VA: National Council of Teachers of Mathematics..
+  In In G. Burrill, &amp; P. C. Elliott (Eds.), <em>Thinking and Reasoning with Data and Chance: 68th NCTM Yearbook</em> (pp. 467&ndash;482). Reston, VA: National Council of Teachers of Mathematics..
   
   <p>
 
