--- a/public/publication/2006-nctm/index.html
+++ b/public/publication/2006-nctm/index.html
@@ -352,7 +352,7 @@
       <div class="col-sm-10">
         <div class="row">
           <div class="col-xs-12 col-sm-3 pub-row-heading">Publication</div>
-          <div class="col-xs-12 col-sm-9">In In G. Burrill and P. C. Elliott (Eds.), <em>Thinking and Reasoning with Data and Chance: 68th NCTM Yearbook</em> (pp. 467&ndash;482). Reston, VA: National Council of Teachers of Mathematics.</div>
+          <div class="col-xs-12 col-sm-9">In In G. Burrill, &amp; P. C. Elliott (Eds.), <em>Thinking and Reasoning with Data and Chance: 68th NCTM Yearbook</em> (pp. 467&ndash;482). Reston, VA: National Council of Teachers of Mathematics.</div>
         </div>
       </div>
       <div class="col-sm-1"></div>
