updated content and color scheme

--- a/public/project/catalst-project/index.html
+++ b/public/project/catalst-project/index.html
@@ -31,7 +31,7 @@ The data sets and PDF version of the lab manual are available at the book&rsquo;
 
   
   
-  <meta name="theme-color" content="#03878a">
+  <meta name="theme-color" content="#04678d">
   
   
   
@@ -486,7 +486,7 @@ The data sets and PDF version of the lab manual are available at the book&rsquo;
     Zieffler, A., Isaak, R., Garfield, J.</span>
   (2013).
   <a href="/publication/2013-tise/" itemprop="name">The Course as Textbook: A Symbiotic Relationship in the Introductory Statistics Class</a>.
-  <em>Technology Innovations in Statistics Education, 7</em>(3)..
+  <em>Technology Innovations in Statistics Education, 7</em>(3).
   
   <p>
 
