--- a/public/publication/2010-assessment/index.html
+++ b/public/publication/2010-assessment/index.html
@@ -29,7 +29,7 @@
 
   
   
-  <meta name="theme-color" content="#03878a">
+  <meta name="theme-color" content="#04678d">
   
   
   
@@ -352,7 +352,7 @@
       <div class="col-sm-10">
         <div class="row">
           <div class="col-xs-12 col-sm-3 pub-row-heading">Publication</div>
-          <div class="col-xs-12 col-sm-9">In P. Bidgood, N. Hunt, &amp; F. Jolliffe (Eds.), <em>Assessment Methods in Statistical Education: An International Perspective</em> (pp. 75&ndash;86). Chichester, West Sussex, England: John Wiley &amp; Sons Ltd.</div>
+          <div class="col-xs-12 col-sm-9">In P. Bidgood, N. Hunt, &amp; F. Jolliffe (Eds.), <em>Assessment Methods in Statistical Education: An International Perspective</em> (pp. 75&ndash;86). Chichester, West Sussex, England: John Wiley &amp; Sons Ltd</div>
         </div>
       </div>
       <div class="col-sm-1"></div>
