--- a/public/publication/2013-tise/index.html
+++ b/public/publication/2013-tise/index.html
@@ -29,7 +29,7 @@
 
   
   
-  <meta name="theme-color" content="#03878a">
+  <meta name="theme-color" content="#04678d">
   
   
   
@@ -352,7 +352,7 @@
       <div class="col-sm-10">
         <div class="row">
           <div class="col-xs-12 col-sm-3 pub-row-heading">Publication</div>
-          <div class="col-xs-12 col-sm-9"><em>Technology Innovations in Statistics Education, 7</em>(3).</div>
+          <div class="col-xs-12 col-sm-9"><em>Technology Innovations in Statistics Education, 7</em>(3)</div>
         </div>
       </div>
       <div class="col-sm-1"></div>
