--- a/public/publication/2014-rolf/index.html
+++ b/public/publication/2014-rolf/index.html
@@ -29,7 +29,7 @@
 
   
   
-  <meta name="theme-color" content="#03878a">
+  <meta name="theme-color" content="#04678d">
   
   
   
@@ -352,7 +352,7 @@
       <div class="col-sm-10">
         <div class="row">
           <div class="col-xs-12 col-sm-3 pub-row-heading">Publication</div>
-          <div class="col-xs-12 col-sm-9">In T. Wassong, D. Frischemeier, P. R. Fischer, R. Hochmuth, &amp; P. Bender (Eds.), <em>Mit Werkzeugen, Mathematik und Stochastik lernen&mdash;Using tools for Learning mathematics and statistics</em> (pp. 405–420). Wiesbaden, Germany: Springer Spektrum.</div>
+          <div class="col-xs-12 col-sm-9">In T. Wassong, D. Frischemeier, P. R. Fischer, R. Hochmuth, &amp; P. Bender (Eds.), <em>Mit Werkzeugen, Mathematik und Stochastik lernen&mdash;Using tools for Learning mathematics and statistics</em> (pp. 405–420). Wiesbaden, Germany: Springer Spektrum</div>
         </div>
       </div>
       <div class="col-sm-1"></div>
