--- a/public/publication/index.html
+++ b/public/publication/index.html
@@ -25,7 +25,7 @@
 
   
   
-  <meta name="theme-color" content="#03878a">
+  <meta name="theme-color" content="#04678d">
   
   
   
@@ -408,7 +408,7 @@
     Zieffler, A., Garfield, J., Fry, E.</span>
   (2017).
   <a href="/publication/2017-handbook/" itemprop="name">What is Statistics Education?</a>.
-  In D. Ben-Zvi, K. Makar, &amp; J. Garfield (Eds.), <em>The International Handbook of Research in Statistics Education</em> (pp. 37&ndash;70). Cham, Switzerland: Springer International Publishing..
+  In D. Ben-Zvi, K. Makar, &amp; J. Garfield (Eds.), <em>The International Handbook of Research in Statistics Education</em> (pp. 37&ndash;70). Cham, Switzerland: Springer International Publishing.
   
   <p>
 
@@ -724,7 +724,7 @@
     delMas, R., Garfield, J., Zieffler, A.</span>
   (2014).
   <a href="/publication/2014-rolf/" itemprop="name">Using TinkerPlots to Develop Tertiary Students&#39; Statistical Thinking in a Modeling-Based Introductory Statistics Class</a>.
-  In T. Wassong, D. Frischemeier, P. R. Fischer, R. Hochmuth, &amp; P. Bender (Eds.), <em>Mit Werkzeugen, Mathematik und Stochastik lernen&mdash;Using tools for Learning mathematics and statistics</em> (pp. 405–420). Wiesbaden, Germany: Springer Spektrum..
+  In T. Wassong, D. Frischemeier, P. R. Fischer, R. Hochmuth, &amp; P. Bender (Eds.), <em>Mit Werkzeugen, Mathematik und Stochastik lernen&mdash;Using tools for Learning mathematics and statistics</em> (pp. 405–420). Wiesbaden, Germany: Springer Spektrum.
   
   <p>
 
@@ -764,7 +764,7 @@
     Zieffler, A., Isaak, R., Garfield, J.</span>
   (2013).
   <a href="/publication/2013-tise/" itemprop="name">The Course as Textbook: A Symbiotic Relationship in the Introductory Statistics Class</a>.
-  <em>Technology Innovations in Statistics Education, 7</em>(3)..
+  <em>Technology Innovations in Statistics Education, 7</em>(3).
   
   <p>
 
@@ -1040,7 +1040,7 @@
     Garfield, J., delMas, R., Zieffler, A.</span>
   (2010).
   <a href="/publication/2010-assessment/" itemprop="name">Assessing Important Learning Outcomes in Introductory Tertiary Statistics Courses</a>.
-  In P. Bidgood, N. Hunt, &amp; F. Jolliffe (Eds.), <em>Assessment Methods in Statistical Education: An International Perspective</em> (pp. 75&ndash;86). Chichester, West Sussex, England: John Wiley &amp; Sons Ltd..
+  In P. Bidgood, N. Hunt, &amp; F. Jolliffe (Eds.), <em>Assessment Methods in Statistical Education: An International Perspective</em> (pp. 75&ndash;86). Chichester, West Sussex, England: John Wiley &amp; Sons Ltd.
   
   <p>
 
@@ -1252,7 +1252,7 @@
     Ben-Zvi, D., Garfield, J., Zieffler, A.</span>
   (2006).
   <a href="/publication/2006-nctm/" itemprop="name">Research in the Statistics Classroom: Learning from Teaching Experiments</a>.
-  In In G. Burrill, &amp; P. C. Elliott (Eds.), <em>Thinking and Reasoning with Data and Chance: 68th NCTM Yearbook</em> (pp. 467&ndash;482). Reston, VA: National Council of Teachers of Mathematics..
+  In G. Burrill, &amp; P. C. Elliott (Eds.), <em>Thinking and Reasoning with Data and Chance: 68th NCTM Yearbook</em> (pp. 467&ndash;482). Reston, VA: National Council of Teachers of Mathematics.
   
   <p>
 
