--- a/public/publication/2017-handbook/index.html
+++ b/public/publication/2017-handbook/index.html
@@ -29,7 +29,7 @@
 
   
   
-  <meta name="theme-color" content="#03878a">
+  <meta name="theme-color" content="#04678d">
   
   
   
@@ -352,7 +352,7 @@
       <div class="col-sm-10">
         <div class="row">
           <div class="col-xs-12 col-sm-3 pub-row-heading">Publication</div>
-          <div class="col-xs-12 col-sm-9">In D. Ben-Zvi, K. Makar, &amp; J. Garfield (Eds.), <em>The International Handbook of Research in Statistics Education</em> (pp. 37&ndash;70). Cham, Switzerland: Springer International Publishing.</div>
+          <div class="col-xs-12 col-sm-9">In D. Ben-Zvi, K. Makar, &amp; J. Garfield (Eds.), <em>The International Handbook of Research in Statistics Education</em> (pp. 37&ndash;70). Cham, Switzerland: Springer International Publishing</div>
         </div>
       </div>
       <div class="col-sm-1"></div>
