--- a/public/project/2018-02-21-biosquare/index.html
+++ b/public/project/2018-02-21-biosquare/index.html
@@ -369,9 +369,9 @@ Background In 2012, several PIs who had received grants from HHMI to implement i
   
   <a class="btn btn-primary btn-outline" href="/tags/biosquare">BioSQuaRE</a>
   
-  <a class="btn btn-primary btn-outline" href="/tags/grant">grant</a>
+  <a class="btn btn-primary btn-outline" href="/tags/grant">Grant</a>
   
-  <a class="btn btn-primary btn-outline" href="/tags/assessment">assessment</a>
+  <a class="btn btn-primary btn-outline" href="/tags/assessment">Assessment</a>
   
 </div>
 
