--- a/public/project/aims-project/index.html
+++ b/public/project/aims-project/index.html
@@ -413,9 +413,9 @@ The AIMS materials are available on Github at https://github.com/zief0002/aims
   
   <a class="btn btn-primary btn-outline" href="/tags/aims">AIMS</a>
   
-  <a class="btn btn-primary btn-outline" href="/tags/teaching">teaching</a>
+  <a class="btn btn-primary btn-outline" href="/tags/teaching">Teaching</a>
   
-  <a class="btn btn-primary btn-outline" href="/tags/grant">grant</a>
+  <a class="btn btn-primary btn-outline" href="/tags/grant">Grant</a>
   
 </div>
 
