--- a/public/project/catalst-project/index.html
+++ b/public/project/catalst-project/index.html
@@ -341,9 +341,9 @@ The data sets and PDF version of the lab manual are available at the book&rsquo;
   
   <a class="btn btn-primary btn-outline" href="/tags/catalst">CATALST</a>
   
-  <a class="btn btn-primary btn-outline" href="/tags/teaching">teaching</a>
+  <a class="btn btn-primary btn-outline" href="/tags/teaching">Teaching</a>
   
-  <a class="btn btn-primary btn-outline" href="/tags/grant">grant</a>
+  <a class="btn btn-primary btn-outline" href="/tags/grant">Grant</a>
   
   <a class="btn btn-primary btn-outline" href="/tags/epsy-3264">EPsy-3264</a>
   
