--- a/public/project/eatlas-project/index.html
+++ b/public/project/eatlas-project/index.html
@@ -351,9 +351,9 @@ The two main instruments developed as part of this project were the Statistics T
 
 <div class="article-tags">
   
-  <a class="btn btn-primary btn-outline" href="/tags/assessment">assessment</a>
+  <a class="btn btn-primary btn-outline" href="/tags/assessment">Assessment</a>
   
-  <a class="btn btn-primary btn-outline" href="/tags/grant">grant</a>
+  <a class="btn btn-primary btn-outline" href="/tags/grant">Grant</a>
   
   <a class="btn btn-primary btn-outline" href="/tags/e-atlas">e-ATLAS</a>
   
