--- a/public/index.html
+++ b/public/index.html
@@ -1255,7 +1255,7 @@ url('/img/typewriter.png');
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://raw.githubusercontent.com/zief0002/Public-Stuff/master/data/april-weather.csv">
+<a class="btn btn-primary btn-outline btn-xs" href="https://">
   PDF
 </a>
 
