--- a/public/talk/canada-2018/index.html
+++ b/public/talk/canada-2018/index.html
@@ -404,7 +404,7 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="https://raw.githubusercontent.com/zief0002/Public-Stuff/master/data/april-weather.csv">
+<a class="btn btn-primary btn-outline" href="https://">
   PDF
 </a>
 
